[gd_scene load_steps=28 format=3 uid="uid://b1u4qvkor56dm"]

[ext_resource type="Script" uid="uid://cp2rc5ikuds4f" path="res://Characters/relentless_bot.gd" id="1_rt4ew"]
[ext_resource type="Shader" uid="uid://cewkp82msxu6d" path="res://Characters/stun_shader.gdshader" id="2_e4umi"]
[ext_resource type="Texture2D" uid="uid://ckegqj277302b" path="res://Assets/Small Monster/small moidle trimmed.png" id="2_h0spo"]
[ext_resource type="Texture2D" uid="uid://bi1c3q20hxnov" path="res://Assets/Small Monster/small morun trimmed.png" id="3_e4umi"]
[ext_resource type="Texture2D" uid="uid://bj28pmjxg3xiq" path="res://Assets/Enemies/Triangloid.png" id="3_m37lg"]
[ext_resource type="AudioStream" uid="uid://ck8jk06hdsw3" path="res://Assets/SFX/Grab.wav" id="4_m37lg"]
[ext_resource type="AudioStream" uid="uid://tbhh05dujyno" path="res://Assets/SFX/DashThrough.wav" id="5_aau3p"]
[ext_resource type="AudioStream" uid="uid://cbujn8tctmke7" path="res://Assets/SFX/EnemyDeath.wav" id="6_f7ibw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m37lg"]
resource_local_to_scene = true
shader = ExtResource("2_e4umi")
shader_parameter/flash_color = Vector3(1, 1, 0.2)
shader_parameter/flash_strength = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_aau3p"]
atlas = ExtResource("3_m37lg")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_68t38"]
atlas = ExtResource("2_h0spo")
region = Rect2(0, 0, 27, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1fxd"]
atlas = ExtResource("2_h0spo")
region = Rect2(0, 39, 27, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbnvk"]
atlas = ExtResource("2_h0spo")
region = Rect2(0, 78, 27, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkw10"]
atlas = ExtResource("2_h0spo")
region = Rect2(0, 117, 27, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_omd1g"]
atlas = ExtResource("2_h0spo")
region = Rect2(0, 156, 27, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqxlg"]
atlas = ExtResource("2_h0spo")
region = Rect2(0, 195, 27, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4umi"]
atlas = ExtResource("3_m37lg")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_td4yq"]
atlas = ExtResource("3_e4umi")
region = Rect2(0, 0, 27, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_uifu4"]
atlas = ExtResource("3_e4umi")
region = Rect2(0, 39, 27, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m1mg"]
atlas = ExtResource("3_e4umi")
region = Rect2(0, 78, 27, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhsjh"]
atlas = ExtResource("3_e4umi")
region = Rect2(0, 117, 27, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ung6g"]
atlas = ExtResource("3_e4umi")
region = Rect2(0, 156, 27, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm4b4"]
atlas = ExtResource("3_e4umi")
region = Rect2(0, 195, 27, 39)

[sub_resource type="SpriteFrames" id="SpriteFrames_w331x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aau3p")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68t38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1fxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbnvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkw10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omd1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqxlg")
}],
"loop": true,
"name": &"Idle_old",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4umi")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_td4yq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uifu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m1mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhsjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ung6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm4b4")
}],
"loop": true,
"name": &"Run_old",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h5pjf"]
radius = 3.5
height = 29.0

[sub_resource type="Curve" id="Curve_lq68t"]
_limits = [0.0, 100.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.901639, 12.3596), 0.0, 0.0, 0, 0, Vector2(0.972678, 100), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h0spo"]
radius = 4.5
height = 14.0

[node name="RelentlessBot" type="CharacterBody2D" groups=["Enemy", "RelentlessBot"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_rt4ew")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 3
material = SubResource("ShaderMaterial_m37lg")
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_w331x")
animation = &"Run"

[node name="PhysicsCollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("CapsuleShape2D_h5pjf")

[node name="StunTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="StunShaderTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="SpecialEffects" type="Node" parent="."]

[node name="GrabParticles" type="CPUParticles2D" parent="SpecialEffects"]
scale = Vector2(2, 2)
emitting = false
amount = 50
lifetime = 0.2
one_shot = true
explosiveness = 1.0
randomness = 0.6
emission_shape = 1
emission_sphere_radius = 2.71
direction = Vector2(0, -1)
spread = 87.4
gravity = Vector2(0, 100)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
damping_curve = SubResource("Curve_lq68t")
scale_amount_max = 1.5

[node name="GrabbedSFX" type="AudioStreamPlayer2D" parent="SpecialEffects"]
scale = Vector2(2, 2)
stream = ExtResource("4_m37lg")

[node name="StunnedSFX" type="AudioStreamPlayer2D" parent="SpecialEffects"]
scale = Vector2(2, 2)
stream = ExtResource("5_aau3p")
volume_db = -2.0

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="SpecialEffects"]
scale = Vector2(2, 2)
stream = ExtResource("6_f7ibw")
volume_db = -3.0

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ChaseTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ThrowHitBox" type="Area2D" parent="." groups=["ThrownEnemy"]]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThrowHitBox"]
shape = SubResource("CapsuleShape2D_h0spo")

[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="StunShaderTimer" to="." method="_on_stun_shader_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
[connection signal="area_entered" from="ThrowHitBox" to="." method="_on_throw_hit_box_area_entered"]
